fix for bug 202817 - clicking on a link that returns a non-trivial mimetype results in download rather than view. p=bz r=blizzard sr=darin